--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,47 +1,21 @@
-<html>
-	 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
-
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">main</h1>
-      </ion-header-bar>
-      <ion-content>
-	    <center><img src="img/csalt.jpg" style= "width:500px; height:300px;" /></center>
+<ion-view title="CodBm">
+	<ion-nav-buttons side="left">
+		<button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
+	<ion-content class="has-header">
+	<div ng-app="app" > <!--ng-controller="NewExerciseCtrl">-->
+	    <center><img src="img/csalt.jpg" style= "width:70%;" /></center>
 		<br/>
-		<!--button class= "button button-stable">
-			OK
-		</button!-->
-		<button class="button button-full button-positive">
-			Resgate
-		</button>
-		<button class="button button-full button-positive">
-			Locais
-		</button>
-		<button class="button button-full button-positive">
+	
+		<a class="button button-full button-positive" href="#/app/natureza">
+			Natureza
+		<a>
+		<a class="button button-full button-positive" href="#/app/local">
+			Local
+		</a>
+		<a class="button button-full button-positive" href="#/app/about">
 			Sobre
-		</button>
-      </ion-content>
-    </ion-pane>
-  </body>
-<html/>
+		</a>
+  </div>
+  </ion-content>
+  </ion-view>
