--- a/www/templates/local.html
+++ b/www/templates/local.html
@@ -4,17 +4,26 @@
    </ion-nav-buttons>
    
    <ion-content class="has-header">
-      <div ng-app="app" > <!--ng-controller="NewExerciseCtrl">--> 
+      <div ng-app="app" ng-controller="LocalCtrl"> 
+         <center>
          <div class="list">
-               <div class="input-label">
-                  Tipo
-               </div>
-               <select>
-               <option>bla bla bla</option>
-               <option selected>Edificação</option>
-               <option>Red Nose</option>
-               </select>
+             <label for="repeatTypes"> Tipo: </label>
+             <select style="width: 70%" name="repeatTypes" id="repeatType" ng-model="type_id" ng-change="selectType()">
+               <option ng-repeat="type in types" value="{{type.id}}">{{type.name}}</option>
+             </select>
          </div>
+         </center>
+         
+         <center>
+         <div class="list2">
+             <label for="repeatLocais"> Local: </label>
+             <select style="width: 70%" name="repeatLocais" id="repeatLocal" ng-model="local">
+               <option ng-repeat="local in locais" value="{{local.code}}">{{local.name}}</option>
+             </select>
+         </div>  
+         </center>
+         <br>
+         <p style="text-align: center; font-family: 'Helvetica'; font-size: xx-large">{{local}}</p>
       </div>
    </ion-content>
 </ion-view>
