--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,17 +20,13 @@
         <ion-item nav-clear menu-close href="#/app/local">
             Local
         </ion-item>		
-		
-        <ion-item nav-clear menu-close href="#">
-			Configuração
-        </ion-item>
         
 
 		<ion-item nav-clear menu-close href="#/app/about">
 			Sobre
 		</ion-item>		
 		
-		<ion-item nav-clear menu-close ng-click="closeLogin()">
+		<ion-item nav-clear menu-close ng-click="closeApp()">
 			Fechar
 		</ion-item>	
 		
