--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -10,9 +10,9 @@
          <p>Salt 126 (SD Rogério) e 127 (SD Renato)</p>
 		</center>
 		<br/>
-		<button class="button button-full button-positive">
+		<button class="button button-full button-positive" ng-click="verifyUpdate()"></>
 			Verificar atualização
-		</button>
+		</button> 
 </div>
 </ion-content>
 </ion-view>
