--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -10,9 +10,11 @@
          <p>Salt 126 (SD Rogério) e 127 (SD Renato)</p>
 		</center>
 		<br/>
-		<button class="button button-full button-positive" ng-click="verifyUpdate()"></>
+		<center>
+         <button class="button button-full button-positive" style="width: 70%" ng-click="verifyUpdate()">
 			Verificar atualização
-		</button> 
+         </button>
+      </center>
 </div>
 </ion-content>
 </ion-view>
