--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,16 +6,18 @@
 	<div ng-app="app" > <!--ng-controller="NewExerciseCtrl">-->
 	    <center><img src="img/csalt.jpg" style= "width:70%;" /></center>
 		<br/>
-	
-		<a class="button button-full button-positive" href="#/app/natureza">
+      
+      <center>
+		<a class="button button-full button-positive" style="width: 70%" href="#/app/natureza">
 			Natureza
-		<a>
-		<a class="button button-full button-positive" href="#/app/local">
+		</a>
+		<a class="button button-full button-positive" style="width: 70%" href="#/app/local">
 			Local
 		</a>
-		<a class="button button-full button-positive" href="#/app/about">
+		<a class="button button-full button-positive " style="width: 70%" href="#/app/about">
 			Sobre
 		</a>
+      </center>
   </div>
   </ion-content>
   </ion-view>
