--- a/www/templates/natureza.html
+++ b/www/templates/natureza.html
@@ -4,17 +4,35 @@
    </ion-nav-buttons>
    
    <ion-content class="has-header">
-      <div ng-app="app" > <!--ng-controller="NewExerciseCtrl">--> 
+       <div ng-app="app" ng-controller="NaturezaCtrl">  <!--ng-controller="NewExerciseCtrl">--> 
+        <center>
          <div class="list">
-               <div class="input-label">
-                  Grupo
-               </div>
-               <select>
-               <option>bla bla bla</option>
-               <option selected>Resgate</option>
-               <option>Red Nose</option>
-               </select>
+             <label for="repeatGrupos"> Grupo: </label>
+             <select style="width: 70%" name="repeatGrupos" id="repeatGrupo" ng-model="grupo_id" ng-change="selectGrupo()">
+                <option ng-repeat="grupo in grupos" value="{{grupo.id}}">{{grupo.name}}</option>
+             </select>
          </div>
-      </div>
+        </center>
+	
+		<center>
+         <div class="list2">
+             <label for="repeatSubGrupos"> SubGrupos: </label>
+             <select style="width: 70%" name="repeatSubGrupos" id="repeatSubGrupo" ng-model="subgrupo_id" ng-change="selectSubGrupo()">
+               <option ng-repeat="subgrupo in subgrupos" value="{{subgrupo.id}}">{{subgrupo.name}}</option>
+             </select>
+         </div>  
+         </center>
+		 
+		 <center>
+         <div class="list3">
+             <label for="repeatNaturezas"> Natureza: </label>
+             <select style="width: 70%" name="repeatNaturezas" id="repeatNatureza" ng-model="natureza">
+               <option ng-repeat="natureza in naturezas" value="{{natureza.code}}">{{natureza.name}} - <div style="float: right">{{natureza.code}}</div></option>
+             </select>
+         </div>  
+         </center>
+		 
+		 <br>
+         <p style="text-align: center; font-family: 'Helvetica'; font-size: xx-large">{{natureza}}</p>
    </ion-content>
 </ion-view>
