--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Sobre">
+﻿<ion-view title="SOBRE">
 	<ion-nav-buttons side="left">
 		<button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
@@ -6,13 +6,15 @@
 	<div ng-app="app" > <!--ng-controller="NewExerciseCtrl">--> 
       <br/>
 	    <center>
-			<img src="img/brothers.jpg" style= "width:30%; height:50%;" />
-         <p>Salt 126 (SD Rogério) e 127 (SD Renato)</p>
+         <figure>
+			<img src="img/brothers.jpg" style= "width:40%; height:70%;" />
+         <figcaption>SALT 126 (SD ROGÉRIO) e 127 (SD RENATO) <br/>joserogerio.santos@gmail.com <br/> renato.fds@gmail.com</figcaption>
+         </figure>
 		</center>
 		<br/>
 		<center>
          <button class="button button-full button-positive" style="width: 70%" ng-click="verifyUpdate()">
-			Verificar atualização
+			VERIFICAR ATUALIZAÇÃO
          </button>
       </center>
 </div>
