--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view title="CodBm">
+<ion-view title="CODBM">
 	<ion-nav-buttons side="left">
 		<button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
@@ -9,13 +9,13 @@
       
       <center>
 		<a class="button button-full button-positive" style="width: 70%" href="#/app/natureza">
-			Natureza
+			NATUREZA
 		</a>
 		<a class="button button-full button-positive" style="width: 70%" href="#/app/local">
-			Local
+			LOCAL
 		</a>
 		<a class="button button-full button-positive " style="width: 70%" href="#/app/about">
-			Sobre
+			SOBRE
 		</a>
       </center>
   </div>
