--- a/www/templates/local.html
+++ b/www/templates/local.html
@@ -1,29 +1,33 @@
-<ion-view title="Local">
+<ion-view title="LOCAL">
    <ion-nav-buttons side="left">
       <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
    </ion-nav-buttons>
    
    <ion-content class="has-header">
       <div ng-app="app" ng-controller="LocalCtrl"> 
-         <center>
-         <div class="list">
-             <label for="repeatTypes"> Tipo: </label>
-             <select style="width: 70%" name="repeatTypes" id="repeatType" ng-model="type_id" ng-change="selectType()">
+      <div  style="padding: 5px;">
+         <div style="margin:0 auto;">
+             <label style="font-size: x-large" for="repeatTypes">TIPO: </label>
+             <br/>
+             <select style="width: 90%; height:40px; font-size: large;" name="repeatTypes" id="repeatType" ng-model="type_id" ng-change="selectType()">
                <option ng-repeat="type in types" value="{{type.id}}">{{type.name}}</option>
              </select>
          </div>
-         </center>
+         </div>
          
-         <center>
-         <div class="list2">
-             <label for="repeatLocais"> Local: </label>
-             <select style="width: 70%" name="repeatLocais" id="repeatLocal" ng-model="local">
-               <option ng-repeat="local in locais" value="{{local.code}}">{{local.name}} - <div style="float: right">{{local.code}}</div></option>
+         <br/>
+      <div  style="padding: 5px;">
+         <div style="margin:0 auto;">
+             <label style="font-size: x-large" for="repeatLocais"> LOCAL: </label>
+             <br/>
+             <select style="width: 90%; height:40px; font-size: large;" name="repeatLocais" id="repeatLocal" ng-model="local">
+               <option ng-repeat="local in locais"  value="{{local.code}}">{{local.name}} - <div style="float: right">{{local.code}}</div></option>
              </select>
          </div>  
-         </center>
-         <br>
-         <p style="text-align: center; font-family: 'Helvetica'; font-size: xx-large">{{local}}</p>
+         </div>
+         
+         <br/><br/>
+         <p style="text-align: center; font-family: 'Helvetica'; font-size: 50px">{{local}}</p>
       </div>
    </ion-content>
 </ion-view>
