--- a/www/templates/natureza.html
+++ b/www/templates/natureza.html
@@ -1,38 +1,44 @@
-<ion-view title="Natureza">
+<ion-view title="NATUREZA">
    <ion-nav-buttons side="left">
       <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
    </ion-nav-buttons>
    
    <ion-content class="has-header">
        <div ng-app="app" ng-controller="NaturezaCtrl">  <!--ng-controller="NewExerciseCtrl">--> 
-        <center>
-         <div class="list">
-             <label for="repeatGrupos"> Grupo: </label>
-             <select style="width: 70%" name="repeatGrupos" id="repeatGrupo" ng-model="grupo_id" ng-change="selectGrupo()">
+
+         <div  style="padding: 5px;">
+         <div style="margin:0 auto;">
+             <label style="font-size: large" for="repeatGrupos">GRUPO: </label>
+             <br/>
+             <select style="width: 90%; height:40px; font-size: large;" name="repeatGrupos" id="repeatGrupo" ng-model="grupo_id" ng-change="selectGrupo()">
                 <option ng-repeat="grupo in grupos" value="{{grupo.id}}">{{grupo.name}}</option>
              </select>
          </div>
-        </center>
-	
-		<center>
-         <div class="list2">
-             <label for="repeatSubGrupos"> SubGrupos: </label>
-             <select style="width: 70%" name="repeatSubGrupos" id="repeatSubGrupo" ng-model="subgrupo_id" ng-change="selectSubGrupo()">
+         </div>
+         
+      <br/>
+      <div  style="padding: 5px;">
+         <div style="margin:0 auto;">
+             <label style="font-size: large" for="repeatSubGrupos">SUBGRUPO:</label>
+             <br/>
+             <select style="width: 90%;  height:40px; font-size: large;" name="repeatSubGrupos" id="repeatSubGrupo" ng-model="subgrupo_id" ng-change="selectSubGrupo()">
                <option ng-repeat="subgrupo in subgrupos" value="{{subgrupo.id}}">{{subgrupo.name}}</option>
              </select>
          </div>  
-         </center>
+      </div>
 		 
-		 <center>
-         <div class="list3">
-             <label for="repeatNaturezas"> Natureza: </label>
-             <select style="width: 70%" name="repeatNaturezas" id="repeatNatureza" ng-model="natureza">
+       <br/>
+      <div  style="padding: 5px;">
+         <div style="margin:0 auto;">
+             <label style="font-size: large" for="repeatNaturezas">NATUREZA:</label>
+             <br/>
+             <select style="width: 90%;  height:40px; font-size: large;" name="repeatNaturezas" id="repeatNatureza" ng-model="natureza">
                <option ng-repeat="natureza in naturezas" value="{{natureza.code}}">{{natureza.name}} - <div style="float: right">{{natureza.code}}</div></option>
              </select>
          </div>  
-         </center>
+      </div>
 		 
-		 <br>
-         <p style="text-align: center; font-family: 'Helvetica'; font-size: xx-large">{{natureza}}</p>
+		 <br/><br/>
+         <p style="text-align: center; font-family: 'Helvetica'; font-size: 50px">{{natureza}}</p>
    </ion-content>
 </ion-view>
