--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,7 +8,7 @@
 	    <center>
          <figure>
 			<img src="img/brothers.jpg" style= "width:40%; height:70%;" />
-         <figcaption>SALT 126 (SD ROGÉRIO) e 127 (SD RENATO) <br/>joserogerio.santos@gmail.com <br/> renato.fds@gmail.com</figcaption>
+         <figcaption>SALT 126 (SD ROGÉRIO) e 127 (SD RENATO) <br/>joserogerio.santos@gmail.com <br/> renatoferreira.fds@gmail.com</figcaption>
          </figure>
 		</center>
 		<br/>
