--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,6 +18,15 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
+$positive:                        #057b6c !default;
+
+$big-bg:      'http://ioniconf.com/img/bg.jpg';
+
+.scroll-bg {
+  background: url($big-bg) no-repeat center center fixed;
+  background-size: cover;
+}
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
