Mudança da cor templates
Mudou a cor de fundo para laranjado

--- a/www/templates/local.html
+++ b/www/templates/local.html
@@ -1,4 +1,4 @@
-<ion-view title="LOCAL">
+<ion-view title="LOCAL" style="background-color: #FF4500">
    <ion-nav-buttons side="left">
       <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
    </ion-nav-buttons>
