--- a/www/templates/natureza.html
+++ b/www/templates/natureza.html
@@ -1,12 +1,11 @@
-<ion-view title="NATUREZA">
+<ion-view title="NATUREZA" style="background-color: #FF4500">
    <ion-nav-buttons side="left">
       <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
    </ion-nav-buttons>
    
    <ion-content class="has-header">
-       <div ng-app="app" ng-controller="NaturezaCtrl">  <!--ng-controller="NewExerciseCtrl">--> 
-
-         <div  style="padding: 5px;">
+	   <div ng-app="app" ng-controller="NaturezaCtrl" >  <!--ng-controller="NewExerciseCtrl">-->  
+		 <div  style="padding: 5px;">
          <div style="margin:0 auto;">
              <label style="font-size: large" for="repeatGrupos">GRUPO: </label>
              <br/>
