--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,23 +1,32 @@
-<ion-view title="CODBM">
-	<ion-nav-buttons side="left">
-		<button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+<ion-view title="" class="bar-assertive">
+   <ion-nav-bar class="bar-assertive">
+   </ion-nav-bar>
+	<ion-nav-buttons side="left" style="background-color: #FF4500">
+		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
+   
 	<ion-content class="has-header">
 	<div ng-app="app" > <!--ng-controller="NewExerciseCtrl">-->
 	    <center><img src="img/csalt.jpg" style= "width:70%;" /></center>
 		<br/>
       
-      <center>
-		<a class="button button-full button-positive" style="width: 70%" href="#/app/natureza">
-			NATUREZA
-		</a>
-		<a class="button button-full button-positive" style="width: 70%" href="#/app/local">
-			LOCAL
-		</a>
-		<a class="button button-full button-positive " style="width: 70%" href="#/app/about">
-			SOBRE
-		</a>
-      </center>
+      <div class="list">
+        <a class="item item-icon-left item-icon-right" href="#/app/natureza">
+          <i class="icon ion-ios-medkit-outline"></i>          
+          NATUREZA
+          <i class="icon ion-ios-play-outline"></i>
+        </a>      
+        <a class="item item-icon-left item-icon-right" href="#/app/local">
+          <i class="icon ion-map"></i>          
+          LOCAL
+          <i class="icon ion-ios-play-outline"></i>
+        </a>      
+        <a class="item item-icon-left item-icon-right" href="#/app/about">
+          <i class="icon ion-ios-pricetags-outline"></i>          
+          SOBRE
+          <i class="icon ion-ios-play-outline"></i>
+        </a>      
+      </div>
   </div>
   </ion-content>
   </ion-view>
