--- a/www/templates/local.html
+++ b/www/templates/local.html
@@ -1,7 +1,8 @@
-<ion-view title="LOCAL" style="background-color: #FF4500">
-   <ion-nav-buttons side="left">
-      <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-   </ion-nav-buttons>
+<ion-view title="LOCAL" class="bar-positive">
+   <ion-nav-bar class="bar-assertive">
+     <ion-nav-back-button></ion-nav-back-button>
+   </ion-nav-bar>
+
    
    <ion-content class="padding  scroll-bg">
       <div ng-app="app" ng-controller="LocalCtrl"> 
