--- a/www/templates/natureza.html
+++ b/www/templates/natureza.html
@@ -1,7 +1,7 @@
-<ion-view title="NATUREZA" style="background-color: #FF4500">
-   <ion-nav-buttons side="left">
-      <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
-   </ion-nav-buttons>
+<ion-view title="NATUREZA" > <!--style="background-color: #FF4500">-->
+   <ion-nav-bar class="bar-assertive">
+     <ion-nav-back-button></ion-nav-back-button>
+   </ion-nav-bar>
    
    <ion-content class="has-header">
 	   <div ng-app="app" ng-controller="NaturezaCtrl" >  <!--ng-controller="NewExerciseCtrl">-->  
