Alterações para inserir na playstore
\n

Deletadas algumas configurações que não estavam sendo utilizadas

Deletas algumas imagens que não estavam sendo utilizadas

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -7,13 +7,13 @@
       <br/>
 	    <center>
          <figure>
-			<img src="img/brothers.jpg" width="60%">
+			<img src="img/rogerio_renato_csalt.jpg" width="80%">
          <figcaption>SALT 126 (SD ROGÉRIO) e 127 (SD RENATO) <br/>joserogerio.santos@gmail.com <br/> renatoferreira.fds@gmail.com</figcaption>
          </figure>
 		</center>
 		<br/>
       
-      <!--<div class="bar bar-footer bar-assertive">-->
+      <!--<div class="bar bar-footer bar-assertive">
          <div class="list">
             <a class="item item-icon-left item-icon-right" ng-click="verifyUpdate()" href="#">
                <i class="icon ion-ios-cloud-download-outline"></i>          
